cf-template/app/.aws-sam/build/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to deploy an EC2 instance running a Streamlit
  app using Docker.
Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
    - t2.micro
    - t2.small
    - t2.medium
    ConstraintDescription: Must be a valid EC2 instance type.
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.
  ScriptS3Bucket:
    Description: S3 bucket where the initialization script is stored
    Type: String
  ScriptS3Key:
    Description: S3 key for the initialization script
    Type: String
Resources:
  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP/S and SSH access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: '0.0.0.0/0'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: '0.0.0.0/0'
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: '0.0.0.0/0'
      - IpProtocol: tcp
        FromPort: 8501
        ToPort: 8501
        CidrIp: '0.0.0.0/0'
  StreamlitInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: InstanceType
      KeyName:
        Ref: KeyName
      SecurityGroupIds:
      - Ref: AppSecurityGroup
      ImageId: ami-0abcdef1234567890
      UserData:
        Fn::Base64:
          Fn::Sub: '#!/bin/bash

            aws s3 cp s3://${ScriptS3Bucket}/${ScriptS3Key} /home/ubuntu/user-data-script.sh

            chmod +x /home/ubuntu/user-data-script.sh

            /home/ubuntu/user-data-script.sh

            '
Outputs:
  InstancePublicIP:
    Description: Public IP of the new EC2 instance
    Value:
      Fn::GetAtt:
      - StreamlitInstance
      - PublicIp
  InstancePublicDNS:
    Description: Public DNS of the new EC2 instance
    Value:
      Fn::GetAtt:
      - StreamlitInstance
      - PublicDnsName
